# emmet

./: .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .travis.yml  404.html  Dockerfile  LICENSE  MANIFEST.in  README.md  _version.py  bs.parquet  dos.parquet  git_tmp.sh  index.html  mkdocs.yml  nose.cfg  objects.inv  pyproject.toml  requirements-docs.txt  requirements-optional.txt  requirements-testing.txt  requirements.txt  retrieve_mpraw_data.py  setup.cfg  setup.py  sitemap.xml  tasks.py  temp.h5  test_disorder_integration.py  tox.ini  try_mongo.py  visualization.ipynb
emmet-api/: Dockerfile  README.md  _version.py  app.py  defect_resources.py  generic_resources.py  gunicorn.conf.py  healthcheck.sh  legacy_resources.py  material_resources.py  molecule_resources.py  mpcule_app.py  mpcule_resources.py  pyproject.toml  requirements.txt  setup.py  start.sh
emmet-api/requirements/: deployment.txt  macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.11.txt  macos-latest_py3.11_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.10_extras.txt-e  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.11_extras.txt-e  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.13.txt  ubuntu-latest_py3.13_extras.txt  ubuntu-latest_py3.14.txt  ubuntu-latest_py3.14_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt  ubuntu-latest_py3.9_extras.txt-e  windows-latest_py3.10.txt  windows-latest_py3.10_extras.txt  windows-latest_py3.8.txt  windows-latest_py3.8_extras.txt  windows-latest_py3.9.txt  windows-latest_py3.9_extras.txt
emmet-api/tests/: async_mongomock.py  conftest.py  test_utils.py
emmet-archival/: pyproject.toml  setup.py
emmet-archival/requirements/: ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.13.txt  ubuntu-latest_py3.13_extras.txt  ubuntu-latest_py3.14.txt  ubuntu-latest_py3.14_extras.txt
emmet-archival/tests/: conftest.py  test_atoms.py  test_base.py  test_common_volumetric.py  test_core.py  test_trajectory.py
emmet-builders/: MANIFEST.in  _version.py  pyproject.toml  requirements.txt  setup.py
emmet-builders/requirements/: conda_requirements.txt  deployment.txt  macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.11.txt  macos-latest_py3.11_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.13.txt  ubuntu-latest_py3.13_extras.txt  ubuntu-latest_py3.14.txt  ubuntu-latest_py3.14_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt  ubuntu-latest_py3.9_extras.txt-e  windows-latest_py3.10.txt  windows-latest_py3.10_extras.txt  windows-latest_py3.8.txt  windows-latest_py3.8_extras.txt  windows-latest_py3.9.txt  windows-latest_py3.9_extras.txt
emmet-builders/tests/: conftest.py  test_absorption.py  test_basic_descriptors.py  test_chemenv.py  test_corrected_entries_thermo.py  test_dielectric.py  test_elasticity.py  test_electronic_structure.py  test_magnetism.py  test_materials.py  test_ml.py  test_mlip_builder.py  test_mobility.py  test_oxidation.py  test_piezoelectric.py  test_qchem.py  test_similarity.py  test_summary.py  test_utils.py  test_vasp.py
emmet-cli/: auto_pull_and_setup.sh  help.py  pyproject.toml  readme.md  requirements.txt  setup.py
emmet-cli/requirements/: ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.13.txt  ubuntu-latest_py3.13_extras.txt  ubuntu-latest_py3.14.txt  ubuntu-latest_py3.14_extras.txt
emmet-cli/tests/: conftest.py  test_state_manager.py  test_submission.py  test_submit.py  test_task_manager.py  test_tasks.py
emmet-core/: _version.py  pyproject.toml  redox_doc_test.json  requirements-all.txt  requirements-extras.txt  requirements.txt  setup.py
emmet-core/dev_scripts/: gen_api_field_test.py  generate_enums.py  generate_identifier_exclude_list.py
emmet-core/notebooks/: arrow_maps_vs_structs-checkpoint.ipynb  arrow_testing-checkpoint.ipynb  pq_vs_jsonl-checkpoint.ipynb
emmet-core/requirements/: deployment.txt  macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.11.txt  macos-latest_py3.11_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.13.txt  ubuntu-latest_py3.13_extras.txt  ubuntu-latest_py3.14.txt  ubuntu-latest_py3.14_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt  windows-latest_py3.10.txt  windows-latest_py3.10_extras.txt  windows-latest_py3.8.txt  windows-latest_py3.8_extras.txt  windows-latest_py3.9.txt  windows-latest_py3.9_extras.txt
emmet-core/tests/: __init__.py  conftest.py  conftest_qchem.py  test_absorption.py  test_arrow.py  test_band_theory.py  test_calculation.py  test_cclib.py  test_chemenv.py  test_defects.py  test_elasticity.py  test_electrodes.py  test_electronic_structure.py  test_graph_hashing.py  test_lobster.py  test_magnetism.py  test_ml.py  test_ml_potential.py  test_model_fields.py  test_molecule_metadata.py  test_moleculemetadata.py  test_mpid.py  test_mpid_ext.py  test_neb.py  test_optimade.py  test_oxidation_states.py  test_phonon.py  test_polar.py  (+16 more)
(+1385 files in other folders)
