[build-system]
requires = ["setuptools>=80.0.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
include = ["emmet.builders"]

[tool.setuptools.package-data]
"emmet.builders.vasp" = ["*.json.gz"]

[project]
name = "emmet-builders"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Builders for the Emmet Library"
authors = [
  { name = "The Materials Project", email = "feedback@materialsproject.org" },
]
license = { text = "Modified BSD" }
dependencies = [
  "emmet-core[all]>=0.85",
  "maggma>=0.57.6",
  "matminer>=0.9.1",
  "pymatgen-io-validation>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/materialsproject/emmet/tree/main/emmet-builders/"
Documentation = "https://materialsproject.github.io/emmet/"

[project.optional-dependencies]
test = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pycodestyle",
  "pydocstyle",
  "flake8",
  "mypy",
  "mypy-extensions",
  "types-setuptools",
  "types-requests",
  "wincertstore",
]
docs = [
  "mkdocs",
  "mkdocs-material<8.3",
  "mkdocs-material-extensions",
  "mkdocs-minify-plugin",
  "mkdocstrings",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-markdownextradata-plugin",
  "mkdocstrings[python]",
  "livereload",
  "jinja2",
]
