[build-system]
requires = ["setuptools>=80.0.0","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
include = ["emmet.core"]

[tool.setuptools.package-data]
"emmet.core.vasp.calc_types" = ["*.yaml"]
"emmet.core.qchem.calc_types" =  ["*.yaml"]
"emmet.core.subtrates" = ["*.json"]

[project]
name = "emmet-core"
dynamic = ["version"]
requires-python = ">=3.10"
description="Core Emmet Library"
license = {text = "Modified BSD"}
authors = [
    {name = "The Materials Project", email="feedback@materialsproject.org"},
]
dependencies = [
    "pymatgen>=2024.6.10",
    "monty>=2024.2.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymatgen-io-validation>=0.1.1",
    "pybtex~=0.24",
    "typing-extensions>=3.7",
    "blake3",
]

[project.urls]
Homepage = "https://github.com/materialsproject/emmet"
Documentation = "https://materialsproject.github.io/emmet/"

[project.optional-dependencies]
all = [
    "seekpath>=2.0.1",
    "robocrys>=0.2.11",
    "pymatgen-analysis-defects>=2024.7.18",
    "pymatgen-analysis-diffusion>=2024.7.15",
    "pymatgen-analysis-alloys>=0.0.6",
    "pyarrow",
]
test = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pycodestyle",
    "pydocstyle",
    "flake8",
    "mypy",
    "mypy-extensions",
    "types-setuptools",
    "types-requests",
    "wincertstore",
    "custodian",
]
docs = [
    "mkdocs",
    "mkdocs-material<8.3",
    "mkdocs-material-extensions",
    "mkdocs-minify-plugin",
    "mkdocstrings",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-markdownextradata-plugin",
    "mkdocstrings[python]",
    "livereload",
    "jinja2",
]
